add tags overview

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,6 +35,8 @@ html
               .nav
                   li
                     a(href="/pages") All Pages
+                  li
+                    a(href="/tags") All Tags
                   li.dropdown
                       a.dropdown-toggle(href="#", data-toggle="dropdown") 
                           | Changes 
