--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,24 +10,6 @@ html
     script(type='text/javascript', src='http://cdn.aloha-editor.org/latest/lib/vendor/jquery-1.7.2.js')
     script(type='text/javascript', src='/vendor/bootstrap/js/bootstrap.js')
     script(src='http://cdn.aloha-editor.org/latest/lib/aloha.js', data-aloha-plugins='common/ui, common/format, common/list, common/link, common/highlighteditables')
-    script(type='text/javascript')
-      Aloha.ready( function() {
-        var $ = Aloha.jQuery;
-        $('.editable').aloha();
-        var save = function(){
-            $.post(document.location.href, {
-              content: $('.content.editable').html(),
-              title: $('h1.title').html(),
-              tags: $(".tags div").html()
-            }).success(saved);
-        };
-        Aloha.bind('aloha-editable-deactivated', save);
-        $('.edit').blur(save);
-      });
-      var saved = function(){
-          var el = $("<div class='alert alert-success'>Saved</div>").appendTo('body .container');
-          setTimeout(function(){ el.remove();}, 2e3);
-      };
   body
       .navbar.navbar-static-top.navbar-inverse
           .navbar-inner
@@ -66,6 +48,5 @@ html
               .span9
                   block content
       
-      
-
+        script(src="/javascripts/application.js")
          
