--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,26 +35,27 @@ html
                               li
                                   a(href=page.path)= page.title
 
-              form.navbar-search.pull-right(action="/search", method="GET")
-                  input.search-query(type="text", placeholder="Search", name="q", id="q")
-                      
-      .container
-          .row
-              .span3
-                  block navigation                          
-                      mixin renderNavigation(navigation)
-                      mixin fileDropper
-                      mixin attachments(page.attachments)
+                form.navbar-search.pull-right(action="/search", method="GET")
+                    input.search-query(type="text", placeholder="Search", name="q", id="q")
+                                            
+        .container
+            #messages.messages
+            .row
+                .span3
+                    block navigation                                                    
+                        mixin renderNavigation(navigation)
+                        mixin fileDropper
+                        mixin attachments(page.attachments)
 
-              .span9
-                  -if (breadcrumbs.length)
-                      ul.breadcrumb
-                          each breadcrumb in breadcrumbs
-                              li
-                                  a(href=breadcrumb.path)= breadcrumb.segment
-                                  span.divider #
+                .span9
+                    -if (breadcrumbs.length)
+                        ul.breadcrumb
+                            each breadcrumb in breadcrumbs
+                                li
+                                    a(href=breadcrumb.path)= breadcrumb.segment
+                                    span.divider #
 
-                  block content
+                    block content
 
         script(src='/vendor/aloha/lib/aloha.js', data-aloha-plugins='common/ui, common/format, common/list, common/link, common/highlighteditables')
         script(src="/javascripts/application.js")
