--- a/views/page.jade
+++ b/views/page.jade
@@ -4,7 +4,7 @@ block content
     h1.title.edit(contenteditable)= page.title
 
     div.tags
-        h2 Tags
+        h2.label.label-success Tags
         div.edit(contenteditable)= page.tags.join(", ")
 
     .content.editable
