add jquery fallback

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,8 @@ html
     link(href='/vendor/aloha/css/aloha.css', rel='stylesheet', type='text/css')
     script(type='text/javascript', src='/vendor/requirejs/require.min.js')
     script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
-    //-add jquery fallback    
+    script
+        window.jQuery || document.write('<script src="vendor/jquery-1.7.1.min.js"><\/script>')
     script(type='text/javascript', src='/vendor/bootstrap/js/bootstrap.js')
   body
       .navbar.navbar-static-top.navbar-inverse
