initialize ckeditor on content

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.css')
-    link(href='/vendor/aloha/css/aloha.css', rel='stylesheet', type='text/css')
     script(type='text/javascript', src='/vendor/requirejs/require.min.js')
     script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script
@@ -59,6 +58,6 @@ html
                     block content
 
         .scripts
-            script(type="text/javascript", src='/vendor/aloha/lib/aloha.js', data-aloha-plugins='common/ui, common/format, common/list, common/link, common/highlighteditables')
+            script(type="text/javascript", src='/vendor/ckeditor/ckeditor.js')
             script(type="text/javascript", src="/javascripts/application.js")
 
