--- a/views/mixins.jade
+++ b/views/mixins.jade
@@ -12,10 +12,21 @@ mixin fileDropper
 
 mixin attachments(files)
     h3 Attachments
-    ul#attachments.attachments
+    ul#attachments.attachments.plain-list
         for file in files
             li 
-                a(href="/attachments/#{page._id}/#{file}")
+                a(href="/attachments/#{page._id}/#{file}", title="#{file}")
                     i.icon-file
                     = file
+                a.icon-remove-sign
+    
+mixin images(files)
+    h3 Images
+    ul#images.images.plain-list
+        for file in files
+            li 
+                a(href="/images/#{page._id}/#{file}", title="#{file}")
+                    i.icon-picture
+                    = file
+                a.icon-remove-sign
     
