--- a/views/page.jade
+++ b/views/page.jade
@@ -11,6 +11,9 @@ block content
 
     #content.content.editable(contenteditable)
         != page.content
+    if(page.modifiedBy)
+        .modified-by last modified by 
+            strong= page.modifiedBy
 
 block pagemeta
     mixin fileDropper
