add syntax highlighting with highlight.js, fix #10

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,11 +5,13 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.css')
+    link(rel="stylesheet", href="/vendor/highlight.js/styles/solarized_light.css")
     script(type='text/javascript', src='/vendor/requirejs/require.min.js')
     script(type='text/javascript', src='//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
     script
         window.jQuery || document.write('<script src="vendor/jquery-1.7.1.min.js"><\/script>')
     script(type='text/javascript', src='/vendor/bootstrap/js/bootstrap.js')
+
   body
       .navbar.navbar-static-top.navbar-inverse
           .navbar-inner
@@ -59,5 +61,6 @@ html
 
         .scripts
             script(type="text/javascript", src='/vendor/ckeditor/ckeditor.js')
+            script(src="vendor/highlight.js/highlight.pack.js")
             script(type="text/javascript", src="/javascripts/application.js")
 
