update droppable description

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,7 +68,7 @@ a {
     color: #ccc;
     font-size:9px;
     text-transform: uppercase;
-    content: "drop images into content";
+    content: "drop images, youtube and vimeo videos into content";
     border-right: 1px solid #ccc;
     border-top: 1px solid #ccc;
 }
