--- a/views/page.jade
+++ b/views/page.jade
@@ -19,3 +19,4 @@ block pagemeta
     mixin fileDropper
     mixin attachments(page.attachments)
     mixin images(page.images)
+    mixin versionLink(page)
