Add global history page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,8 @@ html
                       a(href="/pages") All Pages
                   li
                       a(href="/tags") All Tags
+                  li
+                      a(href="/versions") Version History
                   li.dropdown
                       a.dropdown-toggle(href="#", data-toggle="dropdown") 
                           | Changes 
