--- a/views/versions.jade
+++ b/views/versions.jade
@@ -1,17 +1,20 @@
 extends layout
 
 block content
-    table.table.table-bordered
-        tr
-            th Title
-            th Modified By
-            th Date Modified
-            th Date Created
-        each version in document.versions
+    if(document && document.versions) 
+        table.table.tVable-bordered
             tr
-                td= version.title
-                td= version.modifiedBy
-                td= version.lastModified
-                td= version.created
+                th Title
+                th Modified By
+                th Date Modified
+                th Date Created
+            each version in document.versions
+                tr
+                    td= version.title
+                    td= version.modifiedBy
+                    td= version.lastModified
+                    td= version.created
+    else
+        h1 No versions yet
                   
     a.btn.btn-primary(href="#{page.path}") Back to page
