--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html
       .navbar.navbar-static-top.navbar-inverse
           .navbar-inner
               a.brand(href="/") Node Wiki
-              .nav
+              ul.nav
                   li
                       a(href="/pages") All Pages
                   li
@@ -39,6 +39,14 @@ html
                           each page in recentChanges
                               li
                                   a(href=page.path)= page.title
+
+                ul.nav.pull-right
+                    li.dropdown.pull-right
+                        a.dropdown-toggle(href="#", data-toggle="dropdown") 
+                            | Tasks
+                            b.caret
+                        ul.dropdown-menu
+                            li: a#move-page(href="#") Move Page
 
                 form.navbar-search.pull-right(action="/search", method="GET")
                     input.search-query(type="text", placeholder="Search", name="q", id="q")
