--- a/views/pages.jade
+++ b/views/pages.jade
@@ -1,8 +1,16 @@
 extends layout
 
 block content
-    h1 All pages
+    div.navbar
+      div.navbar-inner
+        a(href="#").brand All pages
+        ul.nav
+          li.active
+            a(href="/pages") List
+          li
+            a(href="/pages/covers") Cover    
     ul
         each page in pages
             li
                 a(href=page.path)= page.title
+
