add missing static image

--- a/views/pages_cover.jade
+++ b/views/pages_cover.jade
@@ -16,7 +16,7 @@ block content
               - if (page.attachments.length == 1)
                 img(src="/attachments/" + page._id + "/" + page.attachments[0]).img-polaroid
               - else 
-                img(src="/images/noimg.png").img-polaroid
+                img(src="/static-images/noimg.png").img-polaroid
                 
               p= page.title
             
