--- a/views/version.jade
+++ b/views/version.jade
@@ -1,13 +1,18 @@
 extends layout
 
 block content
+    .btn-group
+        if previous
+            a.btn(href="/versions/#{page._id}/#{previous._id}") Previous
+        else
+            span.btn.disabled Previous
+        if next
+            a.btn(href="/versions/#{page._id}/#{next._id}") Next
+        else
+            span.btn.disabled Next
+
     h1 Version for #{page.title}
     small from #{version.lastModified}
-
-    if previous
-        a(href="/versions/#{page._id}/#{previous._id}") Previous
-    if next
-        a(href="/versions/#{page._id}/#{next._id}") Next
 
     dl
         dt Title
@@ -29,5 +34,5 @@ block content
         dd= version.tags.join(", ")
 
     form(method="POST", action="/versions/#{page._id}/#{version._id}/restore")
-        input(type="submit").btn.btn-warning(href="#{page.path}", value="Restore")
+        input.pull-right(type="submit").btn.btn-danger(href="#{page.path}", value="Restore")
     a.btn.btn-primary(href="#{page.path}") Back to page
