Implemented static navigation include using special page '/navigation' which content will be displayed left-hand side in above subpages section.

--- a/views/de/layout.jade
+++ b/views/de/layout.jade
@@ -57,7 +57,8 @@ html
             #messages.messages
             .row
                 .span3
-                    block navigation                                                    
+                    block navigation
+                        mixin renderStaticNavigation(staticNavigation)
                         mixin renderNavigation(navigation)
                     block pagemeta
 
