--- a/views/en/mixins.jade
+++ b/views/en/mixins.jade
@@ -1,4 +1,7 @@
-
+mixin renderStaticNavigation(navigationContent)
+    h3 Navigation
+        {navigationContent}
+        
 mixin renderNavigation(navigationItems)
     ul.nav.nav-list
         li.nav-header Pages
