--- a/views/de/mixins.jade
+++ b/views/de/mixins.jade
@@ -1,6 +1,6 @@
 mixin renderStaticNavigation(navigationContent)
     h3 Navigation
-    div!=navigationContent
+    div#staticNavigation.staticNavigation.well!=navigationContent
 
 mixin renderNavigation(navigationItems)
     h3 Unterseiten
