--- a/views/en/layout.jade
+++ b/views/en/layout.jade
@@ -15,14 +15,14 @@ html
   body
       .navbar.navbar-static-top.navbar-inverse
           .navbar-inner
-              a.brand(href="/") Main Page
+              a.brand(href="/") Main page
               ul.nav
                   li
-                      a(href="/pages") All Pages
+                      a(href="/pages") All pages
                   li
-                      a(href="/tags") All Tags
+                      a(href="/tags") All tags
                   li
-                      a(href="/versions") Version History
+                      a(href="/versions") Version history
                   li.dropdown
                       a.dropdown-toggle(href="#", data-toggle="dropdown") 
                           | Changes 
@@ -46,9 +46,10 @@ html
                             | Tasks
                             b.caret
                         ul.dropdown-menu
-                            li: a#new-page(href="#") New Page
-                            li: a#move-page(href="#") Move Page
-                            li: a#delete-page(href="#") Delete Page
+                            li: a#new-page(href="#") New page
+                            li: a#move-page(href="#") Move this page
+                            li: a#delete-page(href="#") Delete this page
+                            li: a#edit-navigation(href="#") Edit navigation
 
                 form.navbar-search.pull-right(action="/search", method="GET")
                     input.search-query(type="text", placeholder="Search", name="q", id="q")
@@ -66,7 +67,7 @@ html
 
                 .span9
                     -if (breadcrumbs.length)
-                        ul.breadcrumb
+                        ul#site-breadcrumb.breadcrumb
                             each breadcrumb in breadcrumbs
                                 li
                                     a(href=breadcrumb.path)= breadcrumb.segment
