Fixed issue #1 progress bar gets removed now after uploading successfully.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,3 +119,7 @@ a {
 #staticNavigation li > a {
     text-decoration: none;
 }
+
+#attachments a.icon-remove-sign {
+    cursor: pointer !important;
+}
