Allow insertion of images etc. inside content area nicer way and hide progress bar after upload in any case

--- a/views/de/mixins.jade
+++ b/views/de/mixins.jade
@@ -35,5 +35,5 @@ mixin images(files)
                 a.icon-remove-sign
 
 mixin versionLink(page)
-    h3 Versions-Historie
+    h3 Versionen
     a(href="/versions/#{page._id}") Versionen anzeigen
