--- a/views/en/mixins.jade
+++ b/views/en/mixins.jade
@@ -34,5 +34,5 @@ mixin images(files)
                 a.icon-remove-sign
 
 mixin versionLink(page)
-    h3 Version History
+    h3 Versions
     a(href="/versions/#{page._id}") Show versions
