Added help message

--- a/views/de/mixins.jade
+++ b/views/de/mixins.jade
@@ -26,6 +26,7 @@ mixin fileDropper
 
 mixin images(files)
     h3 Bilder
+    div Ziehen Sie Bilder und andere Medien einfach in den Editier-Bereich.
     ul#images.images.plain-list
         for file in files
             li 
