--- a/views/de/page.jade
+++ b/views/de/page.jade
@@ -5,16 +5,16 @@ block content
 
     div.tags
         h2.label.label-success
-            i.icon-tags 
+            i.icon-tags
             | &nbsp;Tags
         div.edit(contenteditable)= page.tags.join(", ")
 
     #content.content.editable(contenteditable)
         != page.content
 
-    //-if(page.modifiedBy)
-    //-    .modified-by zuletzt bearbeitet von
-    //-        strong= page.modifiedBy
+    if(page.modifiedBy)
+        .modified-by zuletzt bearbeitet von
+            strong= page.modifiedBy
 
 block pagemeta
     mixin attachments(page.attachments)
