--- a/views/mixins.jade
+++ b/views/mixins.jade
@@ -1,9 +1,9 @@
 mixin renderStaticNavigation(navigationContent)
-    h3 Navigation
+    h3= __("navigation")
     div#staticNavigation.staticNavigation.well!=navigationContent
 
 mixin renderNavigation(navigationItems)
-    h3 Sub pages
+    h3= __("sub-pages")
     ul.nav.nav-list
 
         each navigationItem in navigationItems
@@ -11,29 +11,29 @@ mixin renderNavigation(navigationItems)
                 a(href=navigationItem.path)= navigationItem.title
 
 mixin attachments(files)
-    h3 Attachments
+    h3= __("attachments")
     ul#attachments.attachments.plain-list
         for file in files
-            li 
+            li
                 a(href="/attachments/#{page._id}/#{file}", title="#{file}")
                     i.icon-file
                     = file
                 a.icon-remove-sign
 
 mixin fileDropper
-    #drop-zone.drop-here drop files here
+    #drop-zone.drop-here= __("drop-files-here")
 
 mixin images(files)
-    h3 Images
-    div.imagesDesc Drop images and other media in the content editing area.
+    h3= __("images")
+    div.imagesDesc= __("drop-images-and-other-media")
     ul#images.images.plain-list
         for file in files
-            li 
+            li
                 a(href="/images/#{page._id}/#{file}", title="#{file}")
                     i.icon-picture
                     = file
                 a.icon-remove-sign
 
 mixin versionLink(page)
-    h3 Versions
-    a(href="/versions/#{page._id}") Show versions
+    h3= __("versions")
+    a(href="/versions/#{page._id}")= __("show-versions")
