--- a/views/versionedpages.jade
+++ b/views/versionedpages.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1 Latest Page Versions
+    h1= __("latest-page-versions")
     ul
         each page in pages
             li
