--- a/views/search.jade
+++ b/views/search.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h1 Search results
+    h1= __("search-results")
     ul
         each page in results
             li
