fix i18n jade issues

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -25,7 +25,7 @@ html
                       a(href="/versions")= __("version-history")
                   li.dropdown
                       a.dropdown-toggle(href="#", data-toggle="dropdown")
-                          |= __("changes")
+                          = __("changes")
                           b.caret
 
                       ul.dropdown-menu
@@ -43,7 +43,7 @@ html
                 ul.nav.pull-right
                     li.dropdown.pull-right
                         a.dropdown-toggle(href="#", data-toggle="dropdown")
-                            |= __("tasks")
+                            = __("tasks")
                             b.caret
                         ul.dropdown-menu
                             li: a#new-page(href="#")= __("new-page")
