--- a/views/page.jade
+++ b/views/page.jade
@@ -7,7 +7,7 @@ block content
         h2.label.label-success
             i.icon-tags
             | &nbsp;
-            |= __("tags")
+            = __("tags")
         div.edit(contenteditable)= page.tags.join(", ")
 
     #content.content.editable(contenteditable)
