make frontend locale dynamic

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.css')
     link(rel="stylesheet", href="/vendor/highlight.js/styles/solarized_light.css")
-    script(type='text/javascript', src='/locale/en.js')
+    script(type='text/javascript', src='/javascripts/locale.js')
     script(type='text/javascript', src='/vendor/requirejs/require.min.js')
     script
         window.jQuery || document.write('<script src="/vendor/jquery-1.7.1.min.js"><\/script>')
