--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,6 @@ html
     link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.css')
     link(rel="stylesheet", href="/vendor/highlight.js/styles/solarized_light.css")
     script(type='text/javascript', src='/javascripts/locale.js')
-    script(type='text/javascript', src='/vendor/requirejs/require.min.js')
     script
         window.jQuery || document.write('<script src="/vendor/jquery-1.7.1.min.js"><\/script>')
     script(type='text/javascript', src='/vendor/bootstrap/js/bootstrap.js')
@@ -80,5 +79,5 @@ html
         .scripts
             script(type="text/javascript", src='/vendor/ckeditor/ckeditor.js')
             script(src="/vendor/highlight.js/highlight.pack.js")
-            script(type="text/javascript", src="/javascripts/app.js")
+            script(type="text/javascript", src="/javascripts/application.js")
 
